KAFKA-989 Port EEP specific changes to Kafka 3.6.1, Part 3: connect-runtime, connect-mirror, connect-mirror-client
Ported EEP-specific changes from branch-2.6.1-mapr-mep-9.2 to such modules:
bin/ scripts
config/ files
connect/runtime/
connect/mirror/
connect/mirror-client/